# Buma3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Inc/: Buma3D.h
Inc/Buma3D/: Buma3D.h  Buma3DPlatform.h
Inc/Buma3D/Internal/: Buma3DDetails.h
Inc/Buma3D/Util/: Buma3DPlatform.h  Buma3DPtr.h  Buma3DUtils.h
Inc/Internal/: Buma3DDetails.h
Inc/Util/: Buma3DUtils.h
Project/D3D12/v16/: Buma3D.sln  Buma3D.vcxproj  Buma3D.vcxproj.filters  Buma3D_D3D12_DLL.vcxproj  Buma3D_D3D12_DLL.vcxproj.filters  PropertySheet.props
Project/SharedInc/v16/: Buma3DSharedInc.sln  Buma3DSharedInc.vcxitems  Buma3DSharedInc.vcxitems.filters
Project/Vulkan/v16/: Buma3D.sln  Buma3D.vcxproj  Buma3D.vcxproj.filters  Buma3D_Vulkan_DLL.vcxproj  Buma3D_Vulkan_DLL.vcxproj.filters  Debug_x64.props  PropertySheet.props  Release_x64.props
Source/: .editorconfig
Source/API/D3D12/: AccelerationStructureInfoQueryHeapD3D12.cpp  AccelerationStructureInfoQueryHeapD3D12.h  BufferD3D12.cpp  BufferD3D12.h  Buma3DD3D12.cpp  Buma3DDLLMain.cpp  Buma3DPCH.cpp  Buma3DPCH.h  CMakeLists.txt  CPUDescriptorAllocator.h  CommandAllocatorD3D12.cpp  CommandAllocatorD3D12.h  CommandListD3D12.cpp  CommandListD3D12.h  CommandQueueD3D12.cpp  CommandQueueD3D12.h  CommandSignatureD3D12.cpp  ComputePipelineStateD3D12.cpp  ComputePipelineStateD3D12.h  ConstantBufferViewD3D12.cpp  ConstantBufferViewD3D12.h  DebugMessageD3D12.cpp  DebugMessageD3D12.h  DebugMessageQueueD3D12.cpp  DebugMessageQueueD3D12.h  DepthStencilViewD3D12.cpp  DepthStencilViewD3D12.h  DescriptorHeapD3D12.cpp  DescriptorHeapD3D12.h  DescriptorPool0D3D12.cpp  DescriptorPool0D3D12.h  DescriptorPoolD3D12.cpp  DescriptorPoolD3D12.h  DescriptorSet0D3D12.cpp  DescriptorSet0D3D12.h  DescriptorSetD3D12.cpp  DescriptorSetD3D12.h  DescriptorSetLayoutD3D12.cpp  DescriptorSetLayoutD3D12.h  DescriptorSetUpdateCacheD3D12.cpp  (+60 more)
Source/API/Vulkan/: BufferVk.cpp  BufferVk.h  Buma3DPCH.h  Buma3DVk.cpp  CMakeLists.txt  CommandAllocatorVk.cpp  CommandAllocatorVk.h  CommandListVk.cpp  CommandListVk.h  CommandQueueVk.cpp  CommandQueueVk.h  CommandSignatureVk.cpp  ComputePipelineStateVk.cpp  ComputePipelineStateVk.h  ConstantBufferViewVk.cpp  ConstantBufferViewVk.h  DebugMessageQueueVk.cpp  DebugMessageQueueVk.h  DebugMessageVk.cpp  DebugMessageVk.h  DepthStencilViewVk.cpp  DepthStencilViewVk.h  DescriptorHeapVk.cpp  DescriptorHeapVk.h  DescriptorPool0Vk.cpp  DescriptorPool0Vk.h  DescriptorPoolVk.cpp  DescriptorPoolVk.h  DescriptorSet0Vk.cpp  DescriptorSet0Vk.h  DescriptorSetLayoutVk.cpp  DescriptorSetLayoutVk.h  DescriptorSetUpdateCacheVk.cpp  DescriptorSetUpdateCacheVk.h  DescriptorSetVk.cpp  DescriptorSetVk.h  DescriptorUpdateVk.cpp  DescriptorUpdateVk.h  DeviceAdapterVk.cpp  DeviceAdapterVk.h  (+56 more)
Source/Common/: CMakeLists.txt
Source/Common/Helper/: Buma3DCommonHelper.cpp  Buma3DCommonHelper.h  Buma3DStringHelper.cpp  Buma3DStringHelper.h
Source/Common/Util/: Buma3DCompiler.h  Buma3DDefinitions.h  Buma3DDetails.h  Buma3DMemory.cpp  Buma3DMemory.h  Buma3DUtils.h  FormatUtils.cpp  FormatUtils.h  TLSFMemoryAllocator.cpp  TLSFMemoryAllocator.h
